# Datalake-to-Snowflake-export

./: README.md
snowflake-export/: Dockerfile  README.md  poetry.yml  pyproject.toml
snowflake-export/scripts/: entrypoint.sh
snowflake-export/snowflake_export/: ingest_to_snowflake.py  sf_export.py
